# HoTMiXer

./: .gitignore  CODEOWNERS  README.md  docs.html  go.mod  index.html  package-lock.json  package.json
CLI/: setup_script.js
clack-djula/public/: style.css
clack-djula/templates/: index.djhtml
clack-ten/src/: templates.html
django/static/: style.css
echo/: go.mod  main.go
echo/templates/: index.html
flask/: app.py
flask/bootstrap/: app.py
flask/bootstrap/static/: style.css
flask/bootstrap/templates/: data_table.html  edit_item_form.html  index.html  new_item_form.html
flask/bulma/templates/: data_table.html  edit_item_form.html  index.html  new_item_form.html
flask/regular/: app.py
flask/regular/static/: style.css
flask/regular/templates/: data_table.html  index.html
flask/tailwind/templates/: data_table.html  edit_item_form.html  index.html  new_item_form.html
flask/templates/: index.html
gin/: go.mod  main.go
gin/bootstrap/templates/: data_table.html  edit_item_form.html  index.html  new_item_form.html  style.css
gin/templates/: index.html  new_item_form.html
koa/: app.js  package.json
koa/views/: index.ejs
laravel/routes/: web.php
mongoose/: main.c  mongoose.h
mongoose/web_root/: index.html
node/: app.js  package-lock.json  package.json
node/bootstrap/: app.js
node/views/: index.ejs
rust/: Cargo.toml
rust/src/: main.rs
rust/templates/: index.html
rust_axum/: Cargo.toml
rust_axum/src/: main.rs
rust_axum/static/: style.css
rust_axum/templates/: base.html  index.html
sinatra/: Gemfile  app.rb
(+23 files in other folders)
